--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.61",
+    "@vuepress/client": "2.0.0-beta.59",
+    "@vuepress/theme-default": "2.0.0-beta.59",
+    "vite": "^4.2.1",
     "vue": "^3.2.47",
-    "vuepress": "2.0.0-beta.61"
+    "vuepress": "2.0.0-beta.59"
   }
 }
